--- a/table.html
+++ b/table.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
-<html lang='de'>
-  <head>
-    <meta charset='UTF-8'>
-    <title>LU03.A03 - Tabelle</title>
-    <link rel='stylesheet' href='tabelle.css'>
-  </head>
-  <body>
-    <!-- Erstellen Sie hier die Tabelle --> 
-  </body>
+<html lang="de">
+<head>
+  <meta charset="UTF-8">
+  <title>LU03.A03 - Tabelle</title>
+  <link rel="stylesheet" href="tabelle.css">
+</head>
+<body>
+<table>
+  <tr>
+    <th>Marke</th>
+    <th>Modelle</th>
+  </tr>
+  <tr>
+    <td>Ferrari</td>
+    <td>LaFerrari</td>
+    <td>Enzo</td>
+    <td>458 Italia</td>
+    <td>488 GTB</td>
+  </tr>
+  <tr>
+    <td>Lamborgini</td>
+    <td>Aventador</td>
+  </tr>
+</table>
+</body>
 </html>
