--- a/table.html
+++ b/table.html
@@ -9,18 +9,35 @@
 <table>
   <tr>
     <th>Marke</th>
-    <th>Modelle</th>
+    <th colspan="2">Modelle</th>
+
   </tr>
   <tr>
-    <td>Ferrari</td>
+    <td rowspan="2">Ferrari</td>
     <td>LaFerrari</td>
     <td>Enzo</td>
-    <td>458 Italia</td>
-    <td>488 GTB</td>
+
   </tr>
   <tr>
-    <td>Lamborgini</td>
+    <td>458 Italia</td>
+    <td>488 GTB</td>
+
+  </tr>
+  <tr>
+    <td>Lamborghini</td>
     <td>Aventador</td>
+
+  </tr>
+  <tr>
+    <td rowspan="2">Porsche</td>
+    <td>911</td>
+    <td>918 Spyder</td>
+
+  </tr>
+  <tr>
+    <td>Panamera</td>
+    <td>Cayman</td>
+
   </tr>
 </table>
 </body>
